k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow
  labels:
    name: taskflow
    environment: base
    app.kubernetes.io/name: taskflow
    app.kubernetes.io/component: namespace
